# sitecheck

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
devlog/: 2026-01-18-init-claude-md-security-fix.md  2026-01-18-merge-scrape-date-branch.md
docs/: FAQ.md
src/bash/: extract_content.sh
src/sitecheck/: chatgpt_original_spider.py  extract_div.py  get_cadent_meta.py  list_attribs.py  list_divs.py  list_divs_in_file.py  read_file.py  remove_element.py  scrape_div.py  spider.py  spider_file.py  write_meta.py
tests/: index.html  output.html  test_extract_div.py  test_list_attribs.py  test_list_divs.py  test_read_file.py  test_remove_element.py
